--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <title>Birthday Wish</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-image: url('CHH.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+
+  <!-- 🎵 Birthday song -->
+  <audio autoplay loop>
+    <source src="bdy.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
   <div class="container">
     <h1>🎂 Send Birthday Wishes 🎉</h1>
 
@@ -14,7 +21,6 @@
     <button onclick="showWish()">Wish Now</button>
 
     <h2 id="wishMessage"></h2>
-    <img id="bdayPic" src="CHH.jpg" alt="Birthday Pic" style="display: none; width: 250px; border-radius: 20px; margin-top: 15px;">
   </div>
 
   <script src="script.js"></script>
