--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <h2 id="wishMessage"></h2>
 
-  <img id="bdayPic" src="CHH.jpg" alt="Birthday Pic" style="display: none; width: 250px; border-radius: 20px; margin-top: 15px;">
+  <img id="bdayPic" src="ch.jpg" alt="Birthday Pic" style="display: none; width: 250px; border-radius: 20px; margin-top: 15px;">
 </div>
 
 <script src="script.js"></script>
